# cg25-renderforge

./: .gitignore  CMakeLists.txt  README.md  render_forge.sln
release/doc/: Readme.md  documentation.html  documentation.md
release/return/: Readme.txt
render_forge/: render_forge.vcxproj  render_forge.vcxproj.filters
render_forge/src/: main.cpp
render_forge/src/Engine/: Engine.cpp  Engine.h  QueueFamilyIndicies.cpp  QueueFamilyIndicies.h  SwapChainSupportDetails.h
resources/models/abandoned_car/: license.txt  scene.gltf
resources/models/ground/: ground.mtl  road.mtl  terrain.mtl
resources/models/new-garage/: garage.mtl
resources/models/origami_unicorn/: license.txt  scene.gltf
resources/models/psx_garage/: license.txt  scene.gltf
resources/models/trabant/: license.txt  scene.gltf
resources/models/wf-trabant/: trabant.gltf
resources/scenes/: scene0.xml
shaders/: gbuffer.frag  gbuffer.vert  particles.comp  particles.vert  ssao.frag  ssao.vert  ssao_blur.frag  triangle.frag  triangle.vert
src/: camera_animation_system.cpp  camera_animation_system.hpp  first_app.cpp  first_app.hpp  frg_camera.cpp  frg_camera.hpp  frg_descriptor.cpp  frg_descriptor.hpp  frg_device.cpp  frg_device.hpp  frg_game_object.cpp  frg_game_object.hpp  frg_gbuffer.cpp  frg_gbuffer.hpp  frg_lighting.cpp  frg_lighting.hpp  frg_mesh.cpp  frg_mesh.hpp  frg_model.cpp  frg_model.hpp  frg_particle_dispenser.cpp  frg_particle_dispenser.hpp  frg_pipeline.cpp  frg_pipeline.hpp  frg_renderer.cpp  frg_renderer.hpp  frg_ssao.cpp  frg_ssao.hpp  frg_ssbo.cpp  frg_ssbo.hpp  frg_swap_chain.cpp  frg_swap_chain.hpp  frg_window.cpp  frg_window.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  main.cpp  scene_loader.cpp  scene_loader.hpp  simple_render_system.cpp  (+3 more)
